[gd_scene load_steps=5 format=2]

[ext_resource path="res://World_scenes/scenes/PlayerAltMove.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )

[sub_resource type="CapsuleShape" id=4]

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.862336, 0 )
script = ExtResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 0.4, 0, 0, 0, -1.74846e-08, -0.5, 0, 0.4, -2.18557e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.4, 0, 0, 0, -1.74846e-08, -0.5, 0, 0.4, -2.18557e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Case_Ejector" type="Position3D" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.5, 0.235903, -5.96046e-08, -0.681022 )

[node name="FloorRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.551451, 0 )
enabled = true
cast_to = Vector3( 0, -0.244, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 8, 6 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.99298, -0.118283, 0, 0.118283, 0.99298, -0.0203047, 2.38419e-07, -0.476317 )
light_energy = 4.86
shadow_enabled = true
shadow_contact = 6.41
spot_range = 80.0
spot_angle = 15.0

[node name="gun_barrel" type="Position3D" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.5, 0, 0, -0.986352 )

[node name="GunTimer" type="Timer" parent="."]

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
